* Fix crash when trying to remove a sprite already removed (#705).
* Fix Lua error message saying "number expected" instead of "string expected".
* Fix map scrolling not working if quest size is not a multiple of 5 (#701).
* Fix entities already destroyed when map:on_finished() is called (#691).
* Fix entity:bring_to_front()/back() ignoring the order of obstacles.
* Fix hero stuck on blocks.

_______________________________

Solarus 1.4.2 (2015-05-09)
_______________________________

Bug fixes for the 1.4 release.
No change in the engine (changes in Solarus Quest Editor only).

_______________________________

Solarus 1.4.1 (2015-05-09)
_______________________________

Bug fixes for the 1.4 release.

Engine changes
--------------

* Fix crash with doors whose opening condition is an item (#686).
* Fix the size of custom entities supposed to be optional (#680).
* Fix the hero's sprite reset to default ones when changing equipment (#681).
* Fix animated tiles freezed when running a quest a second time (#679).
* Fix saving empty files.
* Print an error message when there is no font in the quest.

_______________________________

Solarus 1.4.0 (2015-05-02)
_______________________________

The new quest editor release!

Engine changes
--------------

* Solarus now compiles with C++11.
* Solarus Quest Editor was rewritten and is now in a separate repository.
* Solarus can now be used as a library in other projects.
* Add a command-line flag -win-console=yes to see output on Windows (#550).
* Add unit tests.
* Fix a crash if an entity has a sprite without animation.
* Fix crash when using the -no-video command-line option.
* Fix assertion when a crystal block has less than 4 frames.
* Fix hero freeze when a treasure's dialog is missing (#595).
* Fix hero stuck in dynamic tiles just enabled on him (#89).
* Fix hero sometimes moving in wrong directions (#677).
* Fix tunic and sword collision when their sprite is changed (#617).